syntax = "proto3";

package proto;

service Generator {
  rpc GenerateUUID (EmptyRequest) returns (UUIDReply) {}
  rpc Shutdown (EmptyRequest) returns (EmptyReply) {}
  rpc Startup (EmptyRequest) returns (EmptyReply) {}
}

message EmptyRequest {
}

message EmptyReply {
}

message UUIDReply {
  string uuid = 1;
}
